--- a/web-extension/manifest.json
+++ b/web-extension/manifest.json
@@ -1,6 +1,9 @@
 {
     "name": "PUPSIS Schedule Exporter",
     "version": "1.0",
+    "icons": {
+      "128": "web-icons/web-icon.png"
+    },
     "description": "A web extension for converting PUPSIS schedule to ICalendar format (.ics)",
     "permissions": ["activeTab"],
     "content_scripts": [
@@ -15,7 +18,10 @@
     ],
     "action": {
       "default_title": "PUPSIS Schedule Exporter",
-      "default_popup": "popup.html"
+      "default_popup": "popup.html",
+      "icons": {
+        "16": "web-icons/web-icon.png"
+      }
     },
     "manifest_version": 3
 }
