--- a/web-extension/manifest.json
+++ b/web-extension/manifest.json
@@ -9,7 +9,7 @@
     "content_scripts": [
       {
         "matches": [
-          "file:///D:/Downloads/School%20Year%202324%20-%20First%20Semester%20-%20PUPSIS.html",
+          "add the School Year 2324 - First Semester - PUPSIS.html directory here",
           "https://sis1.pup.edu.ph/student/schedule",
           "https://sis2.pup.edu.ph/student/schedule"
         ],
