added multiplatform support

--- a/web-extension/platform/chromium/manifest.json
+++ b/web-extension/platform/chromium/manifest.json
@@ -1,5 +1,6 @@
 {
   "name": "PUPSIS Schedule Exporter",
+  "author" : "Kevin Christian Amparado",
   "version": "4.0.1",
   "icons": {
     "128": "web-icons/web-icon.png"
