--- a/web-extension/platform/edge/manifest.json
+++ b/web-extension/platform/edge/manifest.json
@@ -1,15 +1,12 @@
 {
-  "manifest_version": 2,
   "name": "PUPSIS Schedule Exporter",
+  "author" : "Kevin Christian Amparado",
   "version": "4.0.1",
-  "description": "A web extension for converting PUPSIS schedule to ICalendar format (.ics), CSV, and JSON file",
-  "author": "Kevin Christian Amparado & contributors",
   "icons": {
     "128": "web-icons/web-icon.png"
   },
-  "permissions": [
-    "activeTab"
-  ],
+  "description": "A web extension for converting PUPSIS schedule to ICalendar format (.ics), csv and json file",
+  "permissions": ["activeTab"],
   "content_scripts": [
     {
       "matches": [
@@ -18,22 +15,16 @@
         "https://sis7.pup.edu.ph/student/schedule",
         "https://sis8.pup.edu.ph/student/schedule"
       ],
-      "js": ["contentScript.js"]
+      "js": ["contentScript.js", "editSched.js"]
     }
   ],
-  "browser_action": {
+
+  "action": {
     "default_title": "PUPSIS Schedule Exporter",
     "default_popup": "popup.html",
     "default_icon": {
-      "128": "web-icons/web-icon.png"
+      "16": "web-icons/web-icon.png"
     }
   },
-  "web_accessible_resources": [
-    "web-icons/*",
-    "css/*",
-    "utils/*",
-    "popup.html",
-    "contentScript.js",
-    "editSched.js"
-  ]
+  "manifest_version": 3
 }
