--- a/web-extension/platform/firefox-mv2/manifest.json
+++ b/web-extension/platform/firefox-mv2/manifest.json
@@ -3,7 +3,7 @@
   "name": "PUPSIS Schedule Exporter",
   "version": "4.0.1",
   "description": "A web extension for converting PUPSIS schedule to ICalendar format (.ics), CSV, and JSON file",
-  "author": "Kevin Christian Amparado & contributors",
+  "author": "Kevin Christian Amparado, Anthony John Hinay (Firefox), & contributors",
   "icons": {
     "128": "web-icons/web-icon.png"
   },
@@ -18,7 +18,9 @@
         "https://sis7.pup.edu.ph/student/schedule",
         "https://sis8.pup.edu.ph/student/schedule"
       ],
-      "js": ["contentScript.js"]
+      "js": [
+        "contentScript.js"
+      ]
     }
   ],
   "browser_action": {
@@ -35,5 +37,10 @@
     "popup.html",
     "contentScript.js",
     "editSched.js"
-  ]
+  ],
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "{96d168d0-4f26-4782-a016-23d916b7a0aa}"
+    }
+  }
 }
