--- a/web-extension/platform/firefox-mv2/manifest.json
+++ b/web-extension/platform/firefox-mv2/manifest.json
@@ -3,7 +3,7 @@
   "name": "PUPSIS Schedule Exporter",
   "version": "4.0.1",
   "description": "A web extension for converting PUPSIS schedule to ICalendar format (.ics), CSV, and JSON file",
-  "author": "Kevin Christian Amparado, Anthony John Hinay (Firefox), & contributors",
+  "author": "Kevin Christian Amparado & contributors",
   "icons": {
     "128": "web-icons/web-icon.png"
   },
