--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,12 @@
-# worflow derived from ublock origin
-# https://github.com/gorhill/uBlock/blob/master/.github/workflows/main.yml
-
 name: PUPSIS-Schedule-Exporter Release
 
 on:
-  push:
-    branches:
-       main
+  workflow_dispatch:
+    inputs:
+      version:
+        description: "Set the version for the release"
+        required: true
+        default: "4.0.1.102"  # Default version can be changed
 
 permissions:
   contents: read
@@ -18,7 +18,7 @@ jobs:
 
     name: Build packages
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
+
     steps:
 
       # Checkout the repository
@@ -27,33 +27,33 @@ jobs:
         with:
           persist-credentials: false
        
-      # get the release version tag
-      - name: Get release information
+      # Get the manual version input
+      - name: Get version input
         id: release_info
         run: |
-          echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+          echo "VERSION=${{ github.event.inputs.version }}" >> $GITHUB_ENV
       
-      # build the release notes
+      # Build the release notes
       - name: Assemble release notes
         run: |
           touch release.body.txt
           grep -m1 -B10000 -- "----------" CHANGELOG.md >> release.body.txt
-          sed -e 's/%version%/${{ steps.release_info.outputs.VERSION }}/g' RELEASE.HEAD.md >> release.body.txt
+          sed -e 's/%version%/${{ env.VERSION }}/g' RELEASE.HEAD.md >> release.body.txt
 
-      # create a GitHub release info
+      # Create a GitHub release
       - name: Create GitHub release
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-            tag_name: ${{ steps.release_info.outputs.VERSION }}
-            release_name: ${{ steps.release_info.outputs.VERSION }}
-            draft: true
-            prerelease: true
-            body_path: release.body.txt
+          tag_name: ${{ env.VERSION }}
+          release_name: ${{ env.VERSION }}
+          draft: true
+          prerelease: true
+          body_path: release.body.txt
         
-      # install dependencies and build the packages
+      # Install dependencies and build the packages
       - name: Install dependencies and build the packages
         run: |
           sudo apt-get update
@@ -61,34 +61,35 @@ jobs:
           cd web-extension
           make publish 
 
-
-      # Step 4: Upload all extension files as assets to the release
+      # Upload Chrome package
       - name: Upload Chrome package
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/build/PUPSIS-Schedule-Exporter-${{ steps.release_info.outputs.VERSION }}.chromium.zip
-          asset_name: PUPSIS-Schedule-Exporter-${{ steps.release_info.outputs.VERSION }}.chromium.zip
+          asset_path: dist/build/PUPSIS-Schedule-Exporter-${{ env.VERSION }}.chromium.zip
+          asset_name: PUPSIS-Schedule-Exporter-${{ env.VERSION }}.chromium.zip
           asset_content_type: application/octet-stream
 
+      # Upload Firefox package
       - name: Upload Firefox package
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/build/PUPSIS-Schedule-Exporter-${{ steps.release_info.outputs.VERSION }}.firefox-mv2.zip
-          asset_name: PUPSIS-Schedule-Exporter-${{ steps.release_info.outputs.VERSION }}.firefox-mv2.zip
+          asset_path: dist/build/PUPSIS-Schedule-Exporter-${{ env.VERSION }}.firefox-mv2.zip
+          asset_name: PUPSIS-Schedule-Exporter-${{ env.VERSION }}.firefox-mv2.zip
           asset_content_type: application/octet-stream
 
+      # Upload MS-EDGE package
       - name: Upload MS-EDGE package
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/build/PUPSIS-Schedule-Exporter-${{ steps.release_info.outputs.VERSION }}.edge.zip
-          asset_name: PUPSIS-Schedule-Exporter-${{ steps.release_info.outputs.VERSION }}.edge.zip
+          asset_path: dist/build/PUPSIS-Schedule-Exporter-${{ env.VERSION }}.edge.zip
+          asset_name: PUPSIS-Schedule-Exporter-${{ env.VERSION }}.edge.zip
           asset_content_type: application/octet-stream
