--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,8 +68,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/build/PUPSIS-Schedule-Exporter-${{ env.VERSION }}.chromium.zip
-          asset_name: PUPSIS-Schedule-Exporter-${{ env.VERSION }}.chromium.zip
+          asset_path: web-extension/dist/build/PUPSIS-Schedule-Exporter-${{ env.VERSION }}-chrome.zip
+          asset_name: PUPSIS-Schedule-Exporter-${{ env.VERSION }}-chromium.zip
           asset_content_type: application/octet-stream
 
       # Upload Firefox package
@@ -79,8 +79,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/build/PUPSIS-Schedule-Exporter-${{ env.VERSION }}.firefox-mv2.zip
-          asset_name: PUPSIS-Schedule-Exporter-${{ env.VERSION }}.firefox-mv2.zip
+          asset_path: web-extension/dist/build/PUPSIS-Schedule-Exporter-${{ env.VERSION }}-firefox-mv2.zip
+          asset_name: PUPSIS-Schedule-Exporter-${{ env.VERSION }}-firefox-mv2.zip
           asset_content_type: application/octet-stream
 
       # Upload MS-EDGE package
@@ -90,6 +90,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/build/PUPSIS-Schedule-Exporter-${{ env.VERSION }}.edge.zip
-          asset_name: PUPSIS-Schedule-Exporter-${{ env.VERSION }}.edge.zip
+          asset_path: web-extension/dist/build/PUPSIS-Schedule-Exporter-${{ env.VERSION }}-edge.zip
+          asset_name: PUPSIS-Schedule-Exporter-${{ env.VERSION }}-edge.zip
           asset_content_type: application/octet-stream
