--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
       # Check if the version tag already exists
       - name: Check if tag exists
         run: |
-          if git rev-parse "v${{ env.VERSION }}" >/dev/null 2>&1; then
+          if git rev-parse "${{ env.VERSION }}" >/dev/null 2>&1; then
             echo "Tag already exists. Aborting."
             exit 1
           fi
