--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,8 +43,8 @@ jobs:
         run: |
           touch release.body.txt
           grep -m1 -B10000 -- "----------" CHANGELOG.md >> release.body.txt
-          sed -e 's/%version%/${{ env.VERSION }}/g' RELEASE.md >> release.body.txt
-          sed -e 's/%github_owner%/${{github.repository_owner}}/g' RELEASE.md >> release.body.txt
+          sed -e 's/%version%/${{ env.VERSION }}/g' RELEASE.md | \
+          sed -e 's/%github_owner%/${{ github.repository_owner }}/g' >> release.body.txt
 
       # Create a GitHub release
       - name: Create GitHub release
